--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "daisyui": "^5.0.9",
     "firebase": "^11.6.0",
     "next": "15.2.4",
