generation saving to firebase

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^0.7.0",
+    "@types/sharp": "^0.31.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
-    "firebase-admin": "^13.2.0"
+    "firebase-admin": "^13.2.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
