brainstorm chat working (kinda).

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^0.7.0",
+    "@langchain/core": "^0.3.43",
+    "@langchain/google-genai": "^0.2.2",
+    "@langchain/openai": "^0.5.4",
     "@types/sharp": "^0.31.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.2.0",
-    "sharp": "^0.33.5"
+    "langchain": "^0.3.20",
+    "sharp": "^0.33.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
