--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.16",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
