--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "@langchain/core": "^0.3.43",
     "@langchain/google-genai": "^0.2.2",
     "@langchain/openai": "^0.5.4",
+    "@types/axios": "^0.9.36",
     "@types/sharp": "^0.31.1",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
